--- a/Fronted/html/index.html
+++ b/Fronted/html/index.html
@@ -28,10 +28,10 @@
                         <div class="close-sidebar gradient-text" id="close-sidebar">✖</div>
                     </div>
                     <ul>
-                        <li><a href="./menu.html" class="gradient-text">Menu</a></li>
-                        <li><a href="./about-us.html" class="gradient-text">About Us</a></li>
-                        <li><a href="#" class="gradient-text">Contact</a></li>
-                        <li><a href="#" class="gradient-text">Careers</a></li>
+                        <li><a href="#menu" class="gradient-text">Menu</a></li>
+                        <li><a href="about-us.html" class="gradient-text">About Us</a></li>
+                        <li><a href="contact-us.html" class="gradient-text">Contact</a></li>
+                        <li><a href="careers.html" class="gradient-text">Careers</a></li>
                     </ul>
                 </div>
     
@@ -195,42 +195,6 @@
             </div>
         </div>
     </section>
-
-    <section class="gallery">
-        <h2>Gallery</h2>
-        <div class="gallery-grid">
-            <img src="gallery1.jpg" alt="Hamburguesa 1">
-            <img src="gallery2.jpg" alt="Hamburguesa 2">
-            <img src="gallery3.jpg" alt="Hamburguesa 3">
-            <img src="gallery4.jpg" alt="Hamburguesa 4">
-        </div>
-    </section>
-
-    <section class="contact" id="contact">
-        <div class="contact-info">
-            <h2>CONTÁCTANOS</h2>
-            <p><i class="fas fa-map-marker-alt"></i> Av. Siempre Viva 123, Santiago</p>
-            <p><i class="fas fa-phone"></i> +56 9 1234 5678</p>
-            <p><i class="fas fa-envelope"></i> hola@lingoburguer.cl</p>
-            <p><i class="fas fa-clock"></i> Lunes a Domingo: 12:00 - 22:00 hrs</p>
-
-            <div class="social-media">
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-whatsapp"></i></a>
-            </div>
-        </div>
-        <div class="contact-form">
-            <form>
-                <input type="text" placeholder="Name" required>
-                <input type="email" placeholder="Email" required>
-                <input type="tel" placeholder="Telephone">
-                <textarea placeholder="Mensaje" required></textarea>
-                <button type="submit" class="btn">SEND</button>
-            </form>
-        </div>
-    </section>
-
     <footer>
          <div class="footer-content">
             <img src="../images/LogoLingoBurguerWhite.png" alt="Lingoburguer Logo" class="footer-logo">
