--- a/Fronted/html/privacy-policy.html
+++ b/Fronted/html/privacy-policy.html
@@ -27,11 +27,10 @@
                         <div class="close-sidebar gradient-text" id="close-sidebar">✖</div>
                     </div>
                     <ul>
-                        <li><a href="#" class="gradient-text">Menu</a></li>
-                        <li><a href="#" class="gradient-text">About Us</a></li>
-                        <li><a href="#" class="gradient-text">Contact</a></li>
-                        <li><a href="#" class="gradient-text">Careers</a></li>
-                    </ul>
+                        <li><a href="./index.html#menu" class="gradient-text">Menu</a></li>
+                        <li><a href="./about-us.html" class="gradient-text">About Us</a></li>
+                        <li><a href="./contact-us.html" class="gradient-text">Contact</a></li>
+                        <li><a href="./careers.html" class="gradient-text">Careers</a></li>
                 </div>
 
                 <!-- Logo central -->
