--- a/Fronted/html/careers.html
+++ b/Fronted/html/careers.html
@@ -7,6 +7,7 @@
     <title>About us</title>
     <link rel="stylesheet" href="../css/header-footer.css">
     <link rel="stylesheet" href="../css/careers.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
@@ -40,10 +41,22 @@
                     </a>
                 </div>
 
-                <!-- Iconos de acción -->
                 <div class="user-actions">
                     <div class="action-icon" id="cart-icon">
                         <i class="fas fa-shopping-cart"></i>
+                        <span class="cart-count">0</span>
+                        <div class="cart-dropdown">
+                            <div class="cart-header">
+                                <h3>Tu Carrito</h3>
+                            </div>
+                            <div class="cart-items">
+                                <!-- Los items del carrito se insertarán aquí dinámicamente -->
+                            </div>
+                            <div class="cart-total">
+                                <p>Total: <span id="cart-total-amount">$0.00</span></p>
+                                <button class="btn checkout-btn">Realizar Pedido</button>
+                            </div>
+                        </div>
                     </div>
                     <div class="action-icon" id="user-icon">
                         <i class="fas fa-user"></i>
@@ -167,5 +180,6 @@
 </body>
 <script src="../js/header-footer.js"></script>
 <script src="../js/careers.js"></script>
+<script src="../js/script.js"></script>
 
 </html>
