--- a/Fronted/html/login.html
+++ b/Fronted/html/login.html
@@ -59,7 +59,7 @@
         <label for="confirmPassword">Confirm Password</label>
         <input type="password" id="confirmPassword" placeholder="Confirm your password" required />
 
-        <button type="submit" class="login-btn" id="submitButton" >Sign Up</button>
+        <button type="submit" class="login-btn" id="submitBtn" >Sign Up</button>
 
         <div class="options">
             <a href="#" id="alreadyHaveAccount">Already have an account? Log in</a>
