--- a/Fronted/html/buying_details.html
+++ b/Fronted/html/buying_details.html
@@ -59,42 +59,11 @@
             </div>
 
             <div class="product-list">
-                <div class="product-item">
-                    <div class="product-info">
-                        <img src="../images/burger1.jpg" alt="Hamburguesa" class="product-image">
-                        <div class="product-details">
-                            <div class="product-name">Hamburguesa Clásica</div>
-                            <div class="product-price">$12.99</div>
-                        </div>
-                    </div>
-                    <div class="quantity">x2</div>
-                </div>
-                
-                <div class="product-item">
-                    <div class="product-info">
-                        <img src="../images/burger2.jpg" alt="Hamburguesa" class="product-image">
-                        <div class="product-details">
-                            <div class="product-name">Hamburguesa Especial</div>
-                            <div class="product-price">$15.99</div>
-                        </div>
-                    </div>
-                    <div class="quantity">x1</div>
-                </div>
+                <!-- Los productos se cargarán dinámicamente desde el carrito -->
             </div>
 
             <div class="total-section">
-                <div class="total-row">
-                    <span>Subtotal:</span>
-                    <span>$41.97</span>
-                </div>
-                <div class="total-row">
-                    <span>IVA (16%):</span>
-                    <span>$6.72</span>
-                </div>
-                <div class="total-row">
-                    <span>Total:</span>
-                    <span class="total-amount">$48.69</span>
-                </div>
+                <!-- Los totales se actualizarán dinámicamente -->
             </div>
 
             <div class="payment-methods">
