TRADUCCION AL INGLES DE LAS COSAS PRINCIPALES Y VENTANA DE DETALLES DEL PRODUCTO

--- a/Fronted/html/buying_details.html
+++ b/Fronted/html/buying_details.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Detalles de Compra</title>
+    <title>Purchase Details</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/buying_details_styles.css">
     <link rel="stylesheet" href="../css/header-footer.css">
@@ -49,10 +49,10 @@
 
     <main>
         <div class="buying_details_card">
-            <h2>Detalles de Compra</h2>
+            <h2>Purchase Details</h2>
             
             <div class="establishment-section">
-                <h3 class="establishment-title">Selecciona el Establecimiento</h3>
+                <h3 class="establishment-title">Select the Establishment</h3>
                 <div class="establishment-options">
                     <!-- Los establecimientos se cargarán dinámicamente desde la API -->
                 </div>
@@ -67,20 +67,20 @@
             </div>
 
             <div class="payment-methods">
-                <h3 class="payment-title">Método de pago</h3>
+                <h3 class="payment-title">Method of payment</h3>
                 <div class="payment-options">
                     <div class="payment-option">
                         <i class="fas fa-credit-card"></i>
-                        <div>Tarjeta</div>
+                        <div>Card</div>
                     </div>
                     <div class="payment-option">
                         <i class="fas fa-money-bill-wave"></i>
-                        <div>Efectivo</div>
+                        <div>Cash</div>
                     </div>
                 </div>
             </div>
 
-            <button type="submit" class="confirm-button">Confirmar Compra</button>
+            <button type="submit" class="confirm-button">Confirm Purchase</button>
         </div>
     </main>
 
