--- a/Fronted/html/contact-us.html
+++ b/Fronted/html/contact-us.html
@@ -49,14 +49,14 @@
                         <span class="cart-count">0</span>
                         <div class="cart-dropdown">
                             <div class="cart-header">
-                                <h3>Tu Carrito</h3>
+                                <h3>Your Cart</h3>
                             </div>
                             <div class="cart-items">
                                 <!-- Los items del carrito se insertarán aquí dinámicamente -->
                             </div>
                             <div class="cart-total">
                                 <p>Total: <span id="cart-total-amount">$0.00</span></p>
-                                <button class="btn checkout-btn">Realizar Pedido</button>
+                                <button class="btn checkout-btn">Make an Order</button>
                             </div>
                         </div>
                     </div>
