botones de local y take a wat y solucion de los productos de sides

--- a/Fronted/html/buying_details.html
+++ b/Fronted/html/buying_details.html
@@ -58,6 +58,11 @@
                 </div>
             </div>
 
+            <div class="delivery-options">
+                <button id="pickup-btn" class="delivery-btn active">Local</button>
+                <button id="delivery-btn" class="delivery-btn">Take a way</button>
+            </div>
+
             <div class="product-list">
                 <!-- Los productos se cargarán dinámicamente desde el carrito -->
             </div>
