--- a/Fronted/html/index.html
+++ b/Fronted/html/index.html
@@ -91,7 +91,9 @@
             <p>Our commitment is to offer not only food, but a memorable gastronomic experience.</p>
         </div>
         <div class="about-image">
+            <!-- Eliminar o comentar la línea que contiene la imagen innecesaria
             <img src="burger-about.jpg" alt="Hamburguesa Lingoburguer">
+            -->
         </div>
     </section>
     <section class="menu" id="menu">
@@ -99,7 +101,7 @@
         <div class="menu-categories">
             <button class="category-btn" data-category="entrantes">Appetizers</button>
             <button class="category-btn active" data-category="hamburguesas">Burgers</button>
-            <button class="category-btn" data-category="acompañamientos">Sides</button>
+            <button class="category-btn" data-category="accompaniments">Sides</button>
             <button class="category-btn" data-category="productos-compuestos">Menu</button>
             <button class="category-btn" data-category="bebidas">Drinks</button>
             <button class="category-btn" data-category="postres">Desserts</button>
@@ -113,7 +115,7 @@
             <!-- Los productos se cargarán dinámicamente -->
         </div>
 
-        <div class="menu-items" id="acompañamientos" style="display: none;">
+        <div class="menu-items" id="accompaniments" style="display: none;">
             <!-- Los productos se cargarán dinámicamente -->
         </div>
 
