hay que probarlo para ver si funciona

--- a/Fronted/html/buying_details.html
+++ b/Fronted/html/buying_details.html
@@ -58,9 +58,18 @@
                 </div>
             </div>
 
-            <div class="delivery-options">
-                <button id="pickup-btn" class="delivery-btn active">Local</button>
-                <button id="delivery-btn" class="delivery-btn">Take a way</button>
+            <div class="order-type-section">
+                <h3 class="order-type-title">Order Type</h3>
+                <div class="order-type-options">
+                    <div class="order-type-option" data-type="LOCAL">
+                        <i class="fas fa-store"></i>
+                        <div>Local</div>
+                    </div>
+                    <div class="order-type-option" data-type="TAKEAWAY">
+                        <i class="fas fa-shopping-bag"></i>
+                        <div>Take a way</div>
+                    </div>
+                </div>
             </div>
 
             <div class="product-list">
