--- a/Fronted/html/about-us.html
+++ b/Fronted/html/about-us.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="../css/styles.css">
     <script src="../js/header-footer.js"></script>
+    <link rel="icon" href="../images/LogoLingoIco.ico" type="image/x-icon">
 </head>
 
 <body>
