--- a/Fronted/html/buying_details.html
+++ b/Fronted/html/buying_details.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/buying_details_styles.css">
     <link rel="stylesheet" href="../css/header-footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="icon" href="../images/LogoLingoIco.ico" type="image/x-icon">
 </head>
 
 <body>
