--- a/Fronted/html/userDetail.html
+++ b/Fronted/html/userDetail.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/userDetailStyle.css">
+    <link rel="icon" href="../images/LogoLingoIco.ico" type="image/x-icon">
 </head>
 
 <body>
