--- a/Fronted/html/index.html
+++ b/Fronted/html/index.html
@@ -102,7 +102,7 @@
         <h2>OUR MENU</h2>
         <div class="menu-categories">
             <button class="category-btn" data-category="entrantes">Appetizers</button>
-            <button class="category-btn active" data-category="hamburguesas">Burgers</button>
+            <button class="category-btn active" data-category="burgers">Burgers</button>
             <button class="category-btn" data-category="accompaniments">Sides</button>
             <button class="category-btn" data-category="productos-compuestos">Menu</button>
             <button class="category-btn" data-category="bebidas">Drinks</button>
@@ -113,7 +113,7 @@
             <!-- Los productos se cargarán dinámicamente -->
         </div>
 
-        <div class="menu-items" id="hamburguesas">
+        <div class="menu-items" id="burgers">
             <!-- Los productos se cargarán dinámicamente -->
         </div>
 
