cambio de estilo en boton view menu

--- a/Fronted/html/index.html
+++ b/Fronted/html/index.html
@@ -82,7 +82,7 @@
         <div class="hero-content">
             <h1>HANDMADE HAMBURGERS</h1>
             <p>Made with fresh ingredients of the highest quality.</p>
-            <a href="#menu" class="btn">view Menu</a>
+            <a href="#menu" class="view-details-btn">view Menu</a>
         </div>
     </section>
 
