Order History + Merge

--- a/Fronted/html/buying_details.html
+++ b/Fronted/html/buying_details.html
@@ -49,7 +49,7 @@
     </header>
 
     <main>
-        <div class="buying_details_card">
+        <form class="buying_details_card">
             <h2>Purchase Details</h2>
             
             <div class="establishment-section">
@@ -96,7 +96,7 @@
             </div>
 
             <button type="submit" class="confirm-button">Confirm Purchase</button>
-        </div>
+        </form>
     </main>
 
     <footer>
