--- a/Fronted/html/index.html
+++ b/Fronted/html/index.html
@@ -80,7 +80,7 @@
             <div class="hero-overlay"></div>
         </div>
         <div class="hero-content">
-            <h1>HANDMADE HAMBURGERS</h1>
+            <h1>HANDMADE BURGERS</h1>
             <p>Made with fresh ingredients of the highest quality.</p>
             <a href="#menu" class="view-details-btn">view Menu</a>
         </div>
